fixed input space gap issue

--- a/src/scss/layout/_table.scss
+++ b/src/scss/layout/_table.scss
@@ -28,7 +28,7 @@
     color: $strom-grey;
     appearance: none;
     background-color: $white;
-    text-indent: 14px;
+    text-indent: 20px;
     padding: 0;
   }
 
@@ -163,8 +163,8 @@
   font-family: 'UHCSans-Medium', Helvetica, Arial, sans-serif;
   font-size: 16px;
   line-height: 22px;
-  padding: 8px 0 8px 8px;
-  text-indent: 14px;
+  padding: 8px 0 8px 4px;
+  text-indent: 20px;
 }
 //Input place holder css for IE
 :-ms-input-placeholder {
